Fix textarea text wrapping in Firefox

--- a/jet/static/jet/css/_forms.scss
+++ b/jet/static/jet/css/_forms.scss
@@ -93,7 +93,7 @@ textarea {
   height: auto;
   line-height: normal;
   padding: 12px;
-  white-space: normal;
+  white-space: pre-wrap;
 }
 
 .button, input[type="submit"], input[type="button"] {
