--- a/jet/static/jet/css/themes/green/base.css
+++ b/jet/static/jet/css/themes/green/base.css
@@ -2332,7 +2332,7 @@ textarea {
   height: auto;
   line-height: normal;
   padding: 12px;
-  white-space: normal; }
+  white-space: pre-wrap; }
 
 input[type=checkbox] {
   display: none; }
